# schematics-organizer

./: .gitignore  README.md  pyproject.toml  pytest.ini
scripts/: build_common_emitter_amplifier.py
src/circuit_elements/components/: capacitor.py  inductor.py  npn_transistor.py  pnp_transistor.py  polarized_capacitor.py  potentiometer.py  resistor.py  voltage_source.py
src/circuit_elements/core/: schematic.py
src/circuit_elements/core/base/: base_component.py  component_type.py  net.py  pin.py  schematic.py
src/graph/: graph_visualization.py  networkx_utils.py  planarity.py  protocols.py  start_expansion.py
src/schematic_visualization/: component_graph_conversion.py  schematic_visualization_tools.py
src/scripts/: build_common_emitter_amplifier.py  build_common_emmiter_amplifier.py  build_voltage_divider.py
tests/unit/circuit_elements/core/base/: test_base.py
tests/unit/graph/: test_networkx_utils.py  test_star_expansion.py
tests/unit/schematic/base/: test_base.py
