[project]
name = "schematics-organizer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]



[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
